--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>This is a Website for sure.</h1>
+
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
+    </form>
 </body>
 </html>
